--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,5 +1,22 @@
 @charset "UTF-8";
 @import url("https://fonts.googleapis.com/css?family=Raleway:300,400,600");
+.video-placeholder {
+  position: relative;
+  background-color: #111;
+  padding-top: 56.25%;
+  width: 100%;
+  max-width: 100%;
+}
+
+.video-placeholder_header {
+  font-size: 14px;
+  position: absolute;
+  top: 50%;
+  -webkit-transform: translate(-50%);
+  transform: translate(-50%);
+  left: 50%;
+}
+
 /*!
  * Bootstrap v3.3.7 (http://getbootstrap.com)
  * Copyright 2011-2016 Twitter, Inc.
