--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -5,5 +5,8 @@
 // Variables
 @import "variables";
 
+//Components
+@import "components/video";
+
 // Bootstrap
 @import "node_modules/bootstrap-sass/assets/stylesheets/bootstrap";
