build the video player with video js. for now the default video is played everywhere

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -8,5 +8,8 @@
 //Components
 @import "components/video";
 
+//Vendor
+@import "vendor/videojs";
+
 // Bootstrap
 @import "node_modules/bootstrap-sass/assets/stylesheets/bootstrap";
