--- a/public/css/app.css
+++ b/public/css/app.css
@@ -17,6 +17,11 @@
   left: 50%;
 }
 
+.video__views {
+  font-size: 18px;
+  margin-bottom: 10px;
+}
+
 .video-js .vjs-big-play-button .vjs-icon-placeholder:before, .vjs-button > .vjs-icon-placeholder:before, .video-js .vjs-modal-dialog, .vjs-modal-dialog .vjs-modal-dialog-content {
   position: absolute;
   top: 0;
